<resources>
    <string name="app_name">MyLoginApp</string>
    <string name="activitymain_txtview_text_logo">Esto es un logo</string>
    <string name="activitymain_txtinly_hint_username">Username</string>
    <string name="activitymain_txtinly_hint_password">Password</string>
    <string name="activitymain_mattxtview_text_forgot_password">Forgot password?</string>
    <string name="activitymain_matbtn_text_login">Login</string>
</resources>